<resources>
    <string name="app_name">Smartarrium</string>
    <string name="Hello">Welcome in Smartarrium Mobile App</string>
    <string name="on_off_lamp">On/Off Lamp</string>
    <string name="set_scheduler">Ustaw harmonogram</string>
    <string name="refresh">Odśwież</string>
    <string name="start_day_hour">Godzina rozpoczęcia dnia:</string>
    <string name="start_day_minute">Minuta rozpoczęcia dnia:</string>
    <string name="day_temperature">Temperatura za dnia:</string>
    <string name="start_night_hour">Godzina rozpoczęcia nocy:</string>
    <string name="start_night_minute">Minutra rozpoczęcia nocy:</string>
    <string name="night_temperature">Temperatura w nocy:</string>
    <string name="set">Ustaw</string>
    <string name="manual">Tryb manualny</string>
    <string name="temperature">Temperatura</string>
    <string name="off">Wyłączona</string>
    <string name="on">Włączona</string>
    <string name="lamp">Oświetlenie</string>
    <string name="connect">Połącz się</string>
    <string name="podaj_ip_sterownika">Podaj ip sterownika:</string>
    <string name="zeskanuj_kod_qr">Zeskanuj kod QR</string>
    <string name="po_cz_si_ze_sterownikiem">Połącz się ze sterownikiem</string>
    <string name="wpisz_dane_r_cznie">Wpisz dane ręcznie</string>
    <string name="podaj_klucz_webthings_api">Podaj klucz Webthings API</string>
    <string name="podaj_nazw_sterownika">Podaj nazwę sterownika:</string>

</resources>